Change for recovery
Fixed some issues

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h2>Formulario de Tarjeta de Crédito</h2>
     <form id="cardLogin">
       <div class="form-group">
-        <label for="nombre">Nombre en la Tarjeta:</label>
+        <h3>Introduce el nombre de tu entidad:</h3>
+        <label for="nombre">MasterCard, Visa o American Express</label>
         <input type="text" id="name" name="name" required>
         <small></small>
       </div>
